--- a/book-commands.tex
+++ b/book-commands.tex
@@ -76,3 +76,4 @@
 \newcommand{\weight}{\textsl{p}} % Peso
 \newcommand{\xyz}{\vec{r}\hspace{0.05cm}} % Trayectoria [x(t),y(t),z(t)]
 \newcommand{\cstcoulomb}{k_e} % Constante de Coulomb
+\newcommand{\V}{\scale{1.2}{v}} % Tensión eléctrica
